# vectra-notes_

./: .gitignore  .tmp_test_db.py  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: settings.py
src/app/: deps.py  main.py
src/app/auth/: keycloak.py
src/app/routers/: docs.py  health.py  search.py
src/app/schemas/: document.py  search.py
src/app/services/: embedder.py  searcher.py
src/docker/: Dockerfile.api
src/docker/keycloak/: Dockerfile  realm-export.json
src/docker/sql/: 001_enable_pgvector.sql
src/tests/: test_health.py
